2009-07-23  Sebastian Marsching <sebastian.marsching@1und1.de>

	Added base classes for extension point support and very first part
	of the extension points for page flows.

2009-07-16  Sebastian Marsching <sebastian.marsching@1und1.de>

	Removed pustefix-osgi-spring-dm bundle and moved classes to 
	pustefix-core.

	Support for file: URIs

	Removed code for building pustefix-core-*-data.jar.

2009-07-10  Sebastian Marsching <sebastian.marsching@1und1.de>

	Introduced pustefixcore scheme for access to core XML files.

	Create modified implementation of ScopedProxyUtils / ScopedProxyFactoryBean
	that uses class loader of target bean class.

	Refactored resource handling in target generator.

	Support for "persistentstorage:"-URIs providing access to the
	persistent storage area of the OSGi container.

2009-07-09  Martin Leidig  <mleidig@schlund.de>

	Re-added forgotten defaultflow config option for pagerequests.

2009-07-03  Sebastian Marsching <sebastian.marsching@1und1.de>

	First part of new resource framework:
	Base classes and bundle resource loader implementation.

2009-06-30  Martin Leidig  <mleidig@schlund.de>

	Return null instead of throwing a NPE when calling
	ContextResourceManager.getResource for unconfigured
	ContextResources.

2009-06-26  Sebastian Marsching <sebastian.marsching@1und1.de>

	Use OSGi-aware fleXiParse parser and use ApplicationContext's class loader
	to load non-core beans.

2009-06-25  Martin Leidig  <mleidig@schlund.de>

	Fixed HTTP caching header problem: adding custom HTTP headers using
	SPDocument.addResponseHeader caused that the "Cache-Control" and
	"Expires" headers weren't set. Now these headers are always set if
	they were not overridden by the application.

2009-06-24  Martin Leidig  <mleidig@schlund.de>

	Added support for relative resolving of xincluded Pustefix
	property files.

2009-06-24  Sebastian Marsching <sebastian.marsching@1und1.de>

	Fixed maven.test.skip property for pustefix-sample1 project.
