@@ -1,3 +1,8 @@
+2009-07-24  Sebastian Marsching <sebastian.marsching@1und1.de>
+
+	Made Pustefix Context available and register request and session
+	scope in module's application context.
+
 2009-07-23  Sebastian Marsching <sebastian.marsching@1und1.de>
 
 	Added base classes for extension point support and very first part
